--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -1,8 +1,8 @@
 :root {
-  --primary: #ebc908;
-  --primary-text: #1a1a1a;
-  --secondary: #ff1dec;
+  --primary: #000000;
+  --primary-text: #FFFFFF;
+  --secondary: #60b541;
   --secondary-text: #ffffff;
-  --accent: #505050;
+  --accent: #000000;
   --accent-text: #ffffff;
 }
